--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 			<img src="media/photo_2022-04-18_22-23-35.jpg" height="925" width="1300" >
 		</a>
 	</div>
-	<script src='test.js'></script>
+	<script src='app.js'></script>
 </body>
 </html>
