--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<div class="container" >
+	<div class="" >
 		<a href="/lox">
 			<img src="media/photo_2022-04-18_22-23-35.jpg" height="925" width="1920" >
 		</a>
