--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>денчик лох))))))))))))))))))</title>
+	<title>JS</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1/dist/css/bootstrap.min.css">
 </head>
 <body>
+	<figure>
+		<audio
+			
+			controls
+			src="media/flashbang_explode1.mp3">
+				Your browser does not support the
+				<code>audio</code> element.
+		</audio>
+	</figure>
+
+
 	<div class="" >
 		<a href="/lox">
-			<img src="media/photo_2022-04-18_22-23-35.jpg" height="925" width="1920" >
+			<img src="media/photo_2022-04-18_22-23-35.jpg" height="900" width="1920" >
 		</a>
 	</div>
-	<script src='app.js'></script>
+	<script src='test.js'></script>
+		
 </body>
 </html>
