--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<figure>
 		<audio
-			
+			autoplay
 			controls
 			src="media/flashbang_explode1.mp3">
 				Your browser does not support the
