--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<img src="media/photo_2022-04-18_22-23-35.jpg" height="900" width="1920" >
 		</a>
 	</div>
-	<script src='test.js'></script>
+	<script src='app.js'></script>
 		
 </body>
 </html>
